fixed overlap text problem

--- a/css/new-age.css
+++ b/css/new-age.css
@@ -150,12 +150,10 @@ section h2 {
 
 header.masthead {
   position: relative;
-  height: 100%;
-  width: 100%;
-  padding-top: 15%;
-  padding-bottom: 15%;
+  padding: 20%;
   color: white;
   background: url("../img/mast-background.png");
+  background-position: bottom;
 }
 
 header.masthead .header-content {
@@ -441,6 +439,7 @@ footer ul li a:hover, footer ul li a:focus, footer ul li a:active, footer ul li 
 }
 
 section.people {
+  position: relative;
   padding: 25px;
   background: #66bac7 ;
   background: -webkit-linear-gradient(#66bac7 , #bad6db);
